--- a/staff/anibal-estrella/prework/web/app/style.css
+++ b/staff/anibal-estrella/prework/web/app/style.css
@@ -25,7 +25,7 @@ body {
     justify-content: center;
     height: 100vh;
 }
-.register, .login{ 
+.register, .login, .home{ 
     font-family: var(--montserrat);
     font-weight: 200;
     background-color: #ffffff;
@@ -34,6 +34,7 @@ body {
     box-shadow: 0px 0px 10px #888888;
     min-width: 50vw;
     margin: 0 auto;
+    animation: fade-in 0.3s ease;
 }
 form {
     display: flex;
@@ -93,23 +94,25 @@ button{
     background-color: #00ff08;
 }
 
+
 .off{
     display: none;
 }
 
+@keyframes fade-in {
+    from { opacity: 0;
+    margin-top: 2rem; }
+    to   { opacity: 1; 
+    margin-top: 0;}
+}
 
-@media (max-width: 768px){
+@media screen and (min-width: 320px) and (max-width: 480px){
     body {
         background-color: #00e608;
     }
   
     .register, .login{ 
-
-        width: 50vw;
-        margin: 0 auto;
+        width: 70vw;
     }
 
-    button{
-        background-color: red;
-    }
 }
