--- a/staff/anibal-estrella/prework/web/app/style.css
+++ b/staff/anibal-estrella/prework/web/app/style.css
@@ -48,7 +48,6 @@ label {
   display: flex;
   align-items: center;
   justify-content: center;
-  /* height:90vh; */
   margin: 2rem;
   flex-direction: column;
   padding: 2rem;
@@ -63,11 +62,13 @@ label {
   min-width: 50vw;
   animation: fade-in 0.3s ease;
 }
+
+
 form {
   display: flex;
   flex-direction: column;
   width: 100%;
-}
+} 
 
 h1,
 h2,
@@ -110,6 +111,9 @@ button {
   height: 50px;
   text-transform: uppercase;
   text-shadow: 2px 2px 5px #000;
+  width: 50%;
+  background-color: #00ff08;
+  align-self: center;
 }
 
 input[type="submit"]:focus {
@@ -119,14 +123,13 @@ input[type="submit"]:focus {
 
 button:hover {
   background-color: #00e608;
-  box-shadow: 3px 3px 5px #0000002b;
+  box-shadow: 3px 3px 5px #000000d5;
   text-shadow: none;
 }
-
-button {
-  width: 50%;
-  align-self: center;
-  background-color: #00ff08;
+button:active {
+  background-color: #00e608;
+  text-shadow: none;
+  box-shadow: none;
 }
 
 @keyframes fade-in {
@@ -140,7 +143,7 @@ button {
   }
 }
 
-@media screen and (min-width: 320px) and (max-width: 480px) {
+@media screen and (min-width: 420px) and (max-width: 480px) {
   body {
     background-color: #00e608;
   }
