--- a/staff/anibal-estrella/prework/web/app.3/style.css
+++ b/staff/anibal-estrella/prework/web/app.3/style.css
@@ -12,14 +12,12 @@
   --montserrat: "Montserrat", sans-serif;
   --basecolor: #040404;
   --backcolor: #3a3a3a;
-  --myLime: #00e608;
-  --myRed: #ff3478;
+  --myLime:#00e608;
+  --myRed:#ff3478;
   --fontcolorlight: #dddcd9;
 }
 
-html{
-  height: 100%;
-}
+html,
 body {
   font-family: var(--montserrat);
 }
@@ -30,12 +28,7 @@ body {
   margin: 0;
 }
 
-h1,
-h2,
-h3,
-p,
-a,
-label {
+h1,h2,h3,p,a,label {
   color: var(--fontcolorlight);
 }
 
@@ -72,7 +65,7 @@ label {
 }
 
 section {
-  width: 100%;
+width: 100%;
 }
 form {
   display: flex;
@@ -128,9 +121,7 @@ button {
   align-self: center;
 }
 
-textarea:focus,
-input[type="submit"]:focus,
-input[type="text"]:focus {
+textarea:focus, input[type="submit"]:focus, input[type="text"]:focus {
   box-shadow: none;
   border: none;
 }
@@ -219,7 +210,7 @@ nav {
 
 .overlay-panel-close {
   position: absolute;
-  top: 0;
+  top:0;
   z-index: -1;
   width: 100%;
   height: 100%;
@@ -231,32 +222,26 @@ nav {
   align-items: center;
   position: absolute;
   justify-content: center;
-  bottom: 0;
+bottom: 0;
   width: 100vw;
   height: 50px;
   background-color: var(--myLime);
 }
-.home-footer button {
+.home-footer button{
   font-weight: 700;
   background-color: var(--myRed);
-  color: var(--backcolor);
-  margin: 0;
-  box-shadow: none;
-  text-shadow: none;
-  width: 50px;
-  height: 100%;
-  border-radius: 0px;
-  padding: 0;
+  opacity: 80%;
+color:var(--backcolor);
+margin: 0;
+box-shadow: none;
+text-shadow: none;
+width: 50px;
+height: 100%;
+border-radius: 0px;
+padding: 0;
 }
-.home-footer button:hover {
-opacity: 80%;
-}
-.home-footer button:active {
-  opacity: 100%;
-  background-color: var(--fontcolorlight);
-  }
 
-.add-post-panel {
+.add-post-panel{
   display: flex;
   align-items: center;
   position: absolute;
@@ -269,15 +254,14 @@ opacity: 80%;
   z-index: 1;
   padding: 2rem;
 }
-.add-post-panel form {
+.add-post-panel form{
   min-width: 300px;
-  max-width: 50vw;
+  max-width: 50vw ;
   padding: 2rem;
 }
-.add-post-panel textarea {
+.add-post-panel textarea{
   padding: 1rem;
-  height: auto;
-  border-radius: 20px;
+height: auto;
 }
 
 .off {
