--- a/staff/anibal-estrella/prework/web/app/style.css
+++ b/staff/anibal-estrella/prework/web/app/style.css
@@ -43,7 +43,7 @@ label {
   color: var(--fontcolorlight);
 }
 
-.container {
+.center-container {
   display: flex;
   align-items: center;
   justify-content: center;
@@ -60,6 +60,27 @@ label {
   width: 60vw;
 }
 
+section {
+  width: 100%;
+  max-width: 100%;
+  padding: 1rem;
+}
+
+.home-profile  section > section {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  border-radius: 12px;
+  padding: 2rem;
+  margin-bottom: 2rem;
+  background-color: var(--backcolor);
+}
+
+.home-profile  section > section form {
+max-width: 50vw;
+min-width: 50px;
+align-self: center;
+}
 
 .register,
 .login,
@@ -68,17 +89,8 @@ label {
   animation: fade-in 0.3s ease;
 }
 
-section {
-  width: 100%;
-  max-width: 100%;
-  padding: 1rem;
-  border-radius: 15px;
-  background-color: var(--backcolor);
-  box-shadow: 0px 0px 10px var(--basecolor);
-  margin: 1.5rem;
-  box-sizing: border-box;
 
-}
+
 form {
   display: flex;
   flex-direction: column;
@@ -179,27 +191,35 @@ button:active {
   margin: 2rem 0;
 }
 .home {
-  margin-top: 7.5rem;
+  margin-top: 3.5rem;
+}
+.header-items-wrapper, .footer-items-wrapper{
+  box-shadow: 0px 0px 10px var(--basecolor);
 }
 .home-header {
   position: fixed;
   top: 0;
+  left: 0;
   width: 100vw;
+  max-width: 100%;
+  height: 70px;
+  z-index: 1;
 }
-.header-items-container h1 {
-  margin: 0px 0px 0px 2rem;
-  align-self: flex-start;
-}
-.header-items-container{
+.header-items-wrapper{
   display: flex;
-  flex-wrap: nowrap;
+  flex-direction: row;
   align-items: center;
   justify-content: flex-end;
-  height: 70px;
-  max-width: 100%;
-  border-radius: 20px;
   margin: 1rem;
+  border-radius: 20px;
   background: var(--myBackgroundGradient);
+}
+.header-items-wrapper h1{
+  margin: 0px 0px 0px 2rem;
+}
+
+.header-items-wrapper h1  ~ * {
+  margin-left: auto;
 }
 .home-header-avatar{
   margin: 0 1rem 0 auto;
@@ -217,18 +237,17 @@ button:active {
 }
 
 .home-menu {
-  display: flex;
+  /* display: flex;
   justify-content: center;
   flex-direction: column;
-  flex-wrap: wrap;
-  background-color: #040404b7;
-  backdrop-filter: blur(10px);
+  flex-wrap: wrap; */
   position: fixed;
   top: 0;
   width: 100%;
   height: 100%;
   text-align: center;
-  z-index: 2;
+  background-color: #040404b7;
+  backdrop-filter: blur(10px);
 }
 
 .home-menu ul{
@@ -246,47 +265,44 @@ button:active {
   display: flex;
 }
 
-nav {
-}
-
 .overlay-panel-close {
   position: absolute;
   top: 0;
-  z-index: -1;
+  z-index: 0;
   width: 100%;
   height: 100%;
 }
-footer {
-  position: fixed !important;
+footer.home-footer {
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  width: 100vw;
+  max-width:100%;
 }
-.home-footer {
+
+.footer-items-wrapper {
   display: flex;
   flex-direction: row;
   align-items: center;
-  position: absolute;
   justify-content: center;
-  bottom: 0;
-  width: calc(100vw - 2rem);
-  max-width:100%;
-  height: 50px;
-  background: var(--myBackgroundGradient);
-  border-radius: 20px;
+
   margin: 1rem;
-  box-sizing: border-box;
-  
+  height: 50px;
+  border-radius: 20px;
+  background: var(--myBackgroundGradient);
 }
 .home-footer button {
-  font-size: 2rem;
-  font-weight: 700;
-  background-color: var(--myRed);
-  color: var(--fontcolorlight);
-  margin: 0;
-  box-shadow: none;
-  text-shadow: none;
-  width: 50px;
   height: 100%;
-  border-radius: 0px;
+  width: 50px;
   padding: 0;
+  margin: 0;
+  color: var(--fontcolorlight);
+  font-weight: 700;
+  font-size: 2rem;
+  border-radius: 0px;
+  text-shadow: none;
+  box-shadow: none;
+  background-color: var(--myRed);
 }
 
 .home-footer button:hover {
@@ -301,6 +317,7 @@ footer {
 
 .add-post-panel {
   display: flex;
+  flex-direction: column;
   align-items: center;
   position: absolute;
   justify-content: center;
@@ -314,7 +331,7 @@ footer {
 }
 .add-post-panel form {
   min-width: 300px;
-  max-width: 50vw;
+  max-width: 500px;
   padding: 2rem;
 }
 .add-post-panel textarea {
