--- a/staff/anibal-estrella/prework/web/app/style.css
+++ b/staff/anibal-estrella/prework/web/app/style.css
@@ -409,7 +409,7 @@ footer.home-footer {
 	display: flex;
 	flex-direction: column;
 	align-items: center;
-	position: absolute;
+	position: fixed;
 	justify-content: center;
 	top: 0;
 	left: 0;
