--- a/staff/anibal-estrella/prework/web/app/src/style.css
+++ b/staff/anibal-estrella/prework/web/app/src/style.css
@@ -9,13 +9,15 @@
 }
 
 :root {
-	--a100: 100%;
+	--opacity-50: /50%;
+	--opacity-80: /80%;
 	--montserrat: "Montserrat", sans-serif;
 	--backcolor-values: 162 5% 20%;
-	--opacity-80: /80%;
-	--basecolor: hsl(162, 5%, 6%);
+	--basecolor-values: 162 5% 6%;
+	--basecolor: hsl(var(--basecolor-values));
 	--backcolor: hsl(var(--backcolor-values));
 	--backcolor-80: hsl(var(--backcolor-values) var(--opacity-80));
+	--basecolor-80: hsl(var(--basecolor-values) var(--opacity-80));
 	--myGray: hsl(162, 10%, 40%);
 	--myLightGray: hsl(162, 10%, 70%);
 	--myLime: hsl(162, 100%, 45%);
@@ -336,7 +338,7 @@ The general sibling combinator (~) separates two selectors and matches all itera
 	width: 100%;
 	height: 100%;
 	text-align: center;
-	background-color: var(--backcolor-80);
+	background-color: var(--basecolor-80);
  		backdrop-filter: blur(10px);
 }
 
@@ -421,7 +423,7 @@ footer.home-footer {
 	min-width: 0;
 }
 .add-post-modal,
-.edit-post-panel {
+.edit-post-modal {
 	display: flex;
 	flex-direction: column;
 	align-items: center;
@@ -431,28 +433,28 @@ footer.home-footer {
 	left: 0;
 	height: 100vh;
 	width: 100vw;
-	background-color: var(--backcolor-80);
+	background-color: var(--basecolor-80);
 	backdrop-filter: blur(10px);
 	padding: 2rem;
 	z-index: 1;
 }
 .add-post-modal form,
-.edit-post-panel form {
+.edit-post-modal form {
 	padding: 2rem;
 	z-index: 2;
 }
 .add-post-modal textarea,
-.edit-post-panel textarea {
+.edit-post-modal textarea {
 	padding: 1rem;
 	height: auto;
 	border-radius: 20px;
 }
 .add-post-modal h3,
-.edit-post-panel h3 {
+.edit-post-modal h3 {
 	margin: 0 0 2rem 0;
 }
 .add-post-modal button,
-.edit-post-panel button {
+.edit-post-modal button {
 	margin: 1rem 1rem 0 0;
 }
 
