--- a/staff/anibal-estrella/prework/web/app/src/style.css
+++ b/staff/anibal-estrella/prework/web/app/src/style.css
@@ -8,7 +8,7 @@
 	outline: none;
 }
 
-:root.light {
+:root {
 	--opacity-50: /50%;
 	--opacity-80: /80%;
 	--montserrat: "Montserrat", sans-serif;
@@ -82,6 +82,10 @@ section {
 	width: 100%;
 	max-width: 100%;
 	padding: 1rem;
+}
+
+.icon {
+	width: 24px;
 }
 
 .block-scroll {
@@ -198,7 +202,7 @@ button {
 	color: var(--fontcolorlight);
 	border: none;
 	border-radius: 25px;
-	padding: 10px 20px;
+	padding: 5px 20px;
 	font-size: 0.8rem;
 	letter-spacing: 0.1rem;
 	cursor: pointer;
