--- a/staff/anibal-estrella/prework/web/app/src/components/Post.css
+++ b/staff/anibal-estrella/prework/web/app/src/components/Post.css
@@ -48,18 +48,24 @@ justify-content:flex-start;
 .post time {
 	font-size: smaller;
 }
-
-.HeartIcon{
-	width: 24px;
+.post-buttons{
+display: flex;
+justify-content: center;
 }
 
-.post-like-button {
-	justify-content: center;
+.post-buttons button{
 	display: flex;
+	justify-content: center;
 	align-items: center;
+	padding: 0;
+	margin: 0 .5rem;
+}
+.post-like-button {
 }
 
-.post-like-button svg{
+.post-buttons button svg{
 	/* padding-left: 5px; */
+	height: 50px;
+	width: 1.5rem;	
 	margin: 0 3px;
 }
