--- a/staff/anibal-estrella/prework/web/app/src/components/Post.css
+++ b/staff/anibal-estrella/prework/web/app/src/components/Post.css
@@ -1,14 +1,14 @@
 article.post {
-    display: flex;
+	display: flex;
 	justify-content: center;
-    flex-direction: column;
+	flex-direction: column;
 	margin: 1rem 0;
 	color: var(--fontcolorlight);
 	min-width: 370px;
 }
 
 .post * {
-    max-width: 800px;
+	max-width: 800px;
 }
 
 .home-post-image {
@@ -18,8 +18,8 @@ article.post {
 	align-self: center;
 }
 
-.post p{
-    margin: 1rem 0;
+.post p {
+	margin: 1rem 0;
 	align-self: center;
 }
 
@@ -32,13 +32,13 @@ article.post {
 	display: flex;
 	align-items: center;
 }
-.post-info div{
-display: flex;
-flex: 1;
-flex-direction: column;
-overflow: hidden;
-flex-basis: content;
-justify-content:flex-start;
+.post-info div {
+	display: flex;
+	flex: 1;
+	flex-direction: column;
+	overflow: hidden;
+	flex-basis: content;
+	justify-content: flex-start;
 }
 
 .post h3 {
@@ -48,24 +48,25 @@ justify-content:flex-start;
 .post time {
 	font-size: smaller;
 }
-.post-buttons{
-display: flex;
-justify-content: center;
+.post-buttons {
+	max-width: unset;
+	display: flex;
+	justify-content: center;
 }
 
-.post-buttons button{
+.post-buttons button {
 	display: flex;
 	justify-content: center;
 	align-items: center;
 	padding: 0;
-	margin: 0 .5rem;
+	margin: 0 0.5rem;
 }
 .post-like-button {
 }
 
-.post-buttons button svg{
+.post-buttons button svg {
 	/* padding-left: 5px; */
 	height: 50px;
-	width: 1.5rem;	
+	width: 1.5rem;
 	margin: 0 3px;
 }
